k8s/resources/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-java-app-service
  namespace: default
  labels:
    app: k8s-java-app
spec:
  selector:
    app: k8s-java-app
  ports:
    - name: http-web
      protocol: TCP
      port: 7080
      targetPort: 8080
  type: ClusterIP
