k8s/resources/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-test
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`grafana.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: grafana-service 
          port: 3000
    - match: Host(`app.kube.test.com`)
      kind: Rule
      services:
        - kind: Service
          name: k8s-java-app-service
          port: 7080
